--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Calendario</title>
-
+	<script src="main.js"></script>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1></h1>
 </body>
 </html>
+     
